# datalens

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  Report.md  SECURITY.md  gen_edge.py  stress_test.py  test_comprehensive.py  test_comprehensive.sh  test_deltalake.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: log_parsing.rs
edge_tables/all_nulls/: part-00000-1b639182-ae9b-4e4c-8813-120dc3e4cadb-c000.snappy.parquet
edge_tables/all_types/: part-00000-a7ecabf2-09a9-4911-85d5-f7873962a278-c000.snappy.parquet
edge_tables/custom_actions/: part-00000-e7abbf22-0c61-4ff4-80ac-eecdf06d9746-c000.snappy.parquet
edge_tables/decimal_types/: part-00000-d16491a6-5c02-47c9-bea5-2663798e3554-c000.snappy.parquet
edge_tables/extreme_skew/: part-00000-04f797ec-3f03-4997-a96c-b1bc799ae15a-c000.snappy.parquet  part-00000-52540b74-bcea-408b-b735-a37612d2427e-c000.snappy.parquet  part-00000-5c23fe79-5958-4b3a-9e9e-ff7317ab33a9-c000.snappy.parquet  part-00000-8b003d79-5506-456f-9655-ab0834dbba06-c000.snappy.parquet  part-00000-a31132b9-6577-46d4-9007-1e1edbc90a62-c000.snappy.parquet  part-00000-bdf98413-82c0-4081-9217-76dbe2151262-c000.snappy.parquet
edge_tables/hundred_versions/: part-00000-01b82e24-3be2-47fd-8175-1a6894e9a311-c000.snappy.parquet  part-00000-03720238-dff7-4f1e-9471-0b7fcc85810b-c000.snappy.parquet  (+96 more)
scripts/: gen_fixture.py  install.ps1  install.sh
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs  output_opts.rs
src/core/: mod.rs  (+4 more)
(+565 files in other folders)
