[package]
name = "deltalens"
version = "0.1.1"
edition = "2021"
description = "Zero-dependency CLI for Delta Lake observability"
license = "MIT"
repository = "https://github.com/sandy-sachin7/datalens"
homepage = "https://github.com/sandy-sachin7/datalens"
readme = "README.md"
keywords = ["delta-lake", "databricks", "data-engineering", "observability", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "deltalens"
path = "src/lib.rs"

[[bin]]
name = "deltalens"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "color"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parallelism — core performance lever
rayon = "1"

# Terminal rendering
comfy-table = "=7.0.1"
colored = "2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# File system
walkdir = "2"
glob = "0.3"

# Human readable sizes
bytesize = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bench]]
name = "log_parsing"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
